istio/config/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: main-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /argocd
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: prometheus-grafana.observability.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /jaeger
    route:
    - destination:
        host: jaeger-query.observability.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend.microservices.svc.cluster.local
        port:
          number: 80
